alteracao do mododescanso para opcional

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
             <button id="pause-btn">Pausar</button>
             <button id="reset-btn">Reiniciar</button>
         </div>
+        <div id="break-options" style="display: none;">
+            <p>O pomodoro terminou. Quer fazer uma pausa?</p>
+            <button id="start-short-break-btn">Pausa Curta (5 min)</button>
+            <button id="start-long-break-btn">Pausa Longa (10 min)</button>
+            <button id="skip-break-btn">Pular Pausa</button>
+        </div>
         <div id="pomodoro-counter">Pomodoros: 0</div>
         
         <div class="total-time-container">
